--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,72 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  background: #151925;
+  color: white;
+}
+
+#main-header {
+  max-width: 40rem;
+  margin: 2rem auto 4rem auto;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  color: #c1d9fa;
+}
+
+#main-header img {
+  width: 5rem;
+  height: 5rem;
+  object-fit: contain;
+  border-radius: 50%;
+}
+
+#main-header h1,
+#main-header p {
+  margin: 0;
+}
+
+main {
+  max-width: 40rem;
+  margin: 2rem auto;
+}
+
+.accordion {
+  margin: 2rem 0;
+  border: 1px solid #5d6273;
+  border-radius: 6px;
+  overflow: hidden;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.accordion-item {
+  background-color: #1e2130;
+}
+
+.accordion-item-title {
+  margin: 0;
+  padding: 1rem;
+  background-color: #363e57;
+  cursor: pointer;
+  font-size: 1.15rem;
+  color: #c1d9fa;
+}
+
+.accordion-item-content {
+  display: none;
+  padding: 1rem;
+  background-color: #2c344a;
+}
