--- a/src/index.css
+++ b/src/index.css
@@ -93,8 +93,14 @@ main {
   margin: 2rem 0;
 }
 
-.searchable-list input {
-  width: 100%;
+.searchable-list-input-container {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.searchable-list-input {
+  flex-grow: 1;
   padding: 0.75rem;
   border: 1px solid #5d6273;
   border-radius: 6px;
@@ -103,6 +109,15 @@ main {
   font: inherit;
 }
 
+.searchable-list-button-submit {
+  flex-basis: 30%;
+  padding: 0.75rem;
+  border: none;
+  border-radius: 6px;
+  background-color: #3f51b5;
+  color: white;
+  font: inherit;
+}
 .searchable-list ul {
   list-style: none;
   margin: 0;
@@ -131,4 +146,10 @@ main {
 .place p {
   margin: 0.5rem 0;
   color: #b3b5c6;
+}
+
+@media (width <= 700px) {
+  .searchable-list-button-submit {
+    flex-basis: 100%;
+  }
 }
