--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
   line-height: 1.5;
   font-weight: 400;
 
@@ -10,20 +12,26 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --color-background: #151925;
+  --color-text: rgba(255, 255, 255, 0.87);
+  --color-header: #c1d9fa;
+  --color-primary: #3f51b5;
+  --color-secondary: #1e2130;
+  --color-accent: #2c344a;
+  --color-accent-secondary: #363e57;
+  --color-heading: #faf489;
+  --color-subtext: #b3b5c6;
+  --color-border: #5d6273;
 }
 
 * {
   box-sizing: border-box;
 }
 
-html {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
 body {
-  background: #151925;
-  color: white;
+  background: var(--color-background);
+  color: var(--color-text);
 }
 
 #main-header {
@@ -32,7 +40,7 @@ body {
   display: flex;
   align-items: center;
   gap: 2rem;
-  color: #c1d9fa;
+  color: var(--color-header);
 }
 
 #main-header img {
@@ -54,7 +62,7 @@ main {
 
 .accordion {
   margin: 2rem 0;
-  border: 1px solid #5d6273;
+  border: 1px solid var();
   border-radius: 6px;
   overflow: hidden;
   list-style: none;
@@ -63,22 +71,22 @@ main {
 }
 
 .accordion-item {
-  background-color: #1e2130;
+  background-color: var(--color-secondary);
 }
 
 .accordion-item-title {
   margin: 0;
   padding: 1rem;
-  background-color: #363e57;
+  background-color: var(--color-accent-secondary);
   cursor: pointer;
   font-size: 1.15rem;
-  color: #c1d9fa;
+  color: var(--color-header);
 }
 
 .accordion-item-content {
   display: none;
   padding: 1rem;
-  background-color: #2c344a;
+  background-color: var(--color-accent);
 }
 
 .open {
@@ -97,15 +105,16 @@ main {
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
+  margin-bottom: 2rem;
 }
 
 .searchable-list-input {
   flex-grow: 1;
   padding: 0.75rem;
-  border: 1px solid #5d6273;
+  border: 1px solid var(--color-border);
   border-radius: 6px;
-  background-color: #1e2130;
-  color: white;
+  background-color: var(--color-secondary);
+  color: var(--color-text);
   font: inherit;
 }
 
@@ -114,38 +123,43 @@ main {
   padding: 0.75rem;
   border: none;
   border-radius: 6px;
-  background-color: #3f51b5;
-  color: white;
+  background-color: var(--color-primary);
+  color: var(--color-text);
   font: inherit;
 }
-.searchable-list ul {
+
+.searchable-list-items {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 2rem;
+  justify-content: center;
 }
 
-.place {
+.list-item {
   display: flex;
-  gap: 1rem;
-  margin: 1.5rem 0;
+  flex-direction: column;
 }
 
-.place img {
-  width: 5rem;
-  height: 5rem;
+.list-item img {
+  width: 100%;
+  max-width: 100%;
+  height: 20rem;
   border-radius: 6px;
   object-fit: cover;
 }
 
-.place h2 {
+.list-item h2 {
   margin: 0;
   font-size: 1.5rem;
-  color: #faf489;
+  color: var(--color-heading);
 }
 
-.place p {
+.list-item p {
   margin: 0.5rem 0;
-  color: #b3b5c6;
+  color: var(--color-subtext);
 }
 
 @media (width <= 700px) {
